# OnDeviceTraining

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  devenv.nix  devenv.yaml  pyproject.toml
cmake/: external_dependencies.cmake  helpers.cmake
src/: CMakeLists.txt
src/arithmetic/: Add.c  Arithmetic.c  CMakeLists.txt  Comparison.c  Div.c  Log.c  Matmul.c  MinMax.c  Mul.c  Rounding.c  Square.c  Sub.c  Sum.c
src/arithmetic/include/: Add.h  Arithmetic.h  Comparison.h  Div.h  Log.h  Matmul.h  MinMax.h  Mul.h  Rounding.h  Square.h  Sub.h  Sum.h
src/common/: CMakeLists.txt
src/common/include/: Common.h
src/csv/: CMakeLists.txt  CSVHelper.c
src/csv/include/: CSVHelper.h
src/layer/: CMakeLists.txt  Conv1d.c  Conv1dTransposed.c  Layer.c  Linear.c  QuantizationLayer.c  Relu.c  Softmax.c
src/layer/include/: Conv1d.h  Conv1dTransposed.h  Layer.h  Linear.h  QuantizationLayer.h  Relu.h  Softmax.h
src/loss_functions/: CMakeLists.txt  CrossEntropy.c  LossFunction.c  MSE.c
src/loss_functions/include/: CrossEntropy.h  LossFunction.h  MSE.h
src/models/: CMakeLists.txt  ModelAPI.c
src/models/include/: ModelAPI.h
src/optimizer/: CMakeLists.txt  Optimizer.c  SGD.c  Sgd.c
src/optimizer/include/: Optimizer.h  SGD.h  Sgd.h
src/tensor/: CMakeLists.txt  DTypes.c  DataStorage.c  Quantization.c  Tensor.c  TensorConversion.c
src/tensor/include/: DTypes.h  DataStorage.h  Quantization.h  Tensor.h  TensorConversion.h
src/userAPI/: CMakeLists.txt  InferenceAPI.c  LinearAPI.c  OptimizerAPI.c  QuantizationAPI.c  ReluAPI.c  SgdAPI.c  SoftmaxAPI.c  StorageAPI.c  TensorAPI.c  TrainingAPI.c
src/userAPI/include/: InferenceAPI.h  LinearAPI.h  OptimizerAPI.h  QuantizationAPI.h  ReluAPI.h  SgdAPI.h  SoftmaxAPI.h  StorageAPI.h  TensorAPI.h  TrainingAPI.h
test/unit/: CMakeLists.txt  unit_test.cmake
test/unit/arithmetic/: CMakeLists.txt  UnitTestAdd.c  UnitTestArithmetic.c  UnitTestComparison.c  UnitTestDiv.c  UnitTestLog.c  UnitTestMatmul.c  UnitTestMul.c  UnitTestRounding.c  UnitTestSquare.c  UnitTestSub.c
test/unit/csv/: CMakeLists.txt  UnitTestCSVHelper.c
test/unit/layer/: CMakeLists.txt  UnitTestLinear.c  UnitTestLinear.ipynb  UnitTestRelu.c  UnitTestSoftmax.c
test/unit/loss_functions/: CMakeLists.txt  UnitTestCrossEntropy.c  UnitTestMSE.c  UnitTestMSE.ipynb
test/unit/models/: CMakeLists.txt  UnitTestModelAPI.ipynb
test/unit/optimizer/: CMakeLists.txt  UnitTestSGD.c  UnitTestSgd.c
test/unit/tensor/: CMakeLists.txt  UnitTestTensor.c  UnitTestTensorConversion.c
test/unit/userAPI/: CMakeLists.txt  UnitTestInferenceAPI.c  UnitTestModelAPI.c  UnitTestTrainingAPI.c  UnitTestTrainingAPI.ipynb
